--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -89,7 +89,7 @@
     <script>
         // https://stackoverflow.com/a/63639235
         if(navigator.userAgent.includes("Instagram")){
-            window.location.href = "https://mywebsite.com/DummyBytes";
+            window.location.href = "https://arte.akcademia.xyz";
         }
     </script>
     <div class="header-container">
